deploy/debug/example-consumer-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-consumer-server-deploy
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-consumer-server-pod
  template:
    metadata:
      labels:
        app: example-consumer-server-pod
    spec:
      restartPolicy: Always
      containers:
        - name: example-consumer-server
          image: xudengtang/go-example:latest
          imagePullPolicy: Always
          command: ["./go-example", "kafka_consumer"]
          volumeMounts: # 挂载目录
            - name: configs-volume
              mountPath: /configs/debug
            - name: logs-volume
              mountPath: /logs
            - name: nacos-volume
              mountPath: /nacos
      volumes: # 定义存储卷
        - name: configs-volume
          configMap:
            name: example-server-configmap
        - name: logs-volume
          hostPath:
            path: /Users/zonst/dockerVolumes/exampleVolume/http/logs/consumer
        - name: nacos-volume
          hostPath:
            path: /Users/zonst/dockerVolumes/exampleVolume/http/nacos/consumer
