deploy/debug/example-socket-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-socket-server-deploy
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-socket-server-pod
  template:
    metadata:
      labels:
        app: example-socket-server-pod
    spec:
      restartPolicy: Always
      containers:
        - name: example-socket-server
          image: xudengtang/go-example:latest
          imagePullPolicy: Always
          command: ["./go-example", "socket"]
          ports:
            - name: socket-port
              containerPort: 30000
              protocol: TCP
          volumeMounts: # 挂载目录
            - name: configs-volume
              mountPath: /configs/debug
            - name: jwt-certs-volume
              mountPath: /assets/certs/1652421664
            - name: grpc-certs-volume
              mountPath: /assets/certs/grpc_tls
            - name: logs-volume
              mountPath: /logs
            - name: nacos-volume
              mountPath: /nacos
      volumes: # 定义存储卷
        - name: configs-volume
          configMap:
            name: example-server-configmap
        - name: jwt-certs-volume
          secret:
            secretName: example-server-secret-jwt-certs
        - name: grpc-certs-volume
          secret:
            secretName: example-server-secret-grpc-certs
        - name: logs-volume
          hostPath:
            path: /Users/zonst/dockerVolumes/exampleVolume/http/logs/socket
        - name: nacos-volume
          hostPath:
            path: /Users/zonst/dockerVolumes/exampleVolume/http/nacos/socket
