deploy/debug/example-socket-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-socket-server-ingress
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
    - host: goexample.socket.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example-socket-server-service
                port:
                  number: 30000
